# QPLEX

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  README.rst  api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  qmodel.py  qplex.algorithms.html  qplex.algorithms.mixers.html  qplex.commons.html  qplex.html  qplex.model.html  qplex.solvers.html  qplex.utils.html  qplex.workflows.html  requirements.txt  sandbox.py  search.html  searchindex.js  setup.py
.github/workflows/: deploy-docs.yaml  publish.yaml  tests.yaml
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  qplex.algorithms.mixers.rst.txt  qplex.algorithms.rst.txt  qplex.commons.rst.txt  qplex.model.rst.txt  qplex.rst.txt  qplex.solvers.rst.txt  qplex.utils.rst.txt  qplex.workflows.rst.txt
docs/: conf.py  index.rst  modules.rst  qplex.algorithms.rst  qplex.commons.rst  qplex.model.rst  qplex.rst
examples/: battery_revenue_optimization.py  complex_knapsack.py  custom_minor_embedding.py  knapsack.py  knapsack_discrete.py  max_cut.py  openqasm-test.py  phase_unwrapping.py  portfolio_optimization.py  sandbox.py
examples/data/: portfolio_data.csv
qplex/: __init__.py  config.yaml  info.py
qplex/algorithms/: __init__.py  base_algorithm.py  expectation_calculator.py  qaoa.py  vqe.py
qplex/commons/: __init__.py  algorithm_factory.py  ggae.py  ggaem.py  model_utils.py  optimization_callback.py  options.py  solver_factory.py  workflow_utils.py
qplex/examples/: sandbox.py
qplex/helpers/: __init__.py
qplex/model/: __init__.py  (+7 more)
(+73 files in other folders)
